# taskify-api

./: .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  release.yml
src/app/: main.py
src/app/api/: __init__.py  health.py
src/app/api/v1/: __init__.py  auth.py  categories.py  priorities.py  tasks.py  todos.py  users.py
src/app/core/: config.py  database.py  db.py  exceptions.py
src/app/core/users/: auth.py  manager.py  security.py  users.py
src/app/core/utils/: exceptions.py
src/app/dal/: __init__.py  constants.py  db_repo.py  db_service.py
src/app/http_exceptions/: resource_already_exists.py  resource_not_exists.py  user_not_allowed.py
src/app/models/: base.py  tables.py
src/app/schemas/: __init__.py  base.py  category.py  todo.py  user.py
src/app/users/: auth.py  manager.py  security.py  users.py
src/app/utils/: __init__.py  emails.py  exceptions.py  open_api.py
src/migrations/: env.py
src/migrations/versions/: 71139a54084d_first_migration.py
src/scripts/: bootstrap.py  docker-entrypoint.sh
src/tests/: conftest.py  conftest_utils.py
src/tests/api/: test_categories.py  test_priorities.py  test_todos.py
