[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.mypy]
python_version = "3.9"
plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["src/tests", "venv"]
warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[tool.ruff]
exclude = [
    ".eggs", ".git", ".git-rewrite", ".mypy_cache",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache",
    ".venv", ".vscode", "__pypackages__", "venv", ".idea"
]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests}/*" = ["E402"]

[project]
name = "TaskifyAPI"
version = "0.0.1"
description = "FastAPI based API for Taskify"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic~=2.6.1",
    "python-dotenv~=1.0.1",
    "pyhumps~=3.8.0",
    "fastapi~=0.109.2",
    "fastapi-users[sqlalchemy]~=12.1.3",
    "fastapi-users-db-sqlalchemy~=6.0.1",
    "starlette~=0.36.3",
    "SQLAlchemy~=2.0.26",
    "uvicorn~=0.27.1",
    "asyncpg~=0.29.0",
    "alembic~=1.13.1",
    "emails~=0.6",
    "jinja2~=3.1.3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "asgi_lifespan",
    "httpx",
    "pytest-lazy-fixture",
]
lint = [
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/pluresque/taskify-api"
"Bug Tracker" = "https://github.com/tishka17/taskify-api"